[package]
name = "rdii-tool"
version = "0.1.0"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Online tool for analyzing Rainfall-Derived Infiltration and Inflow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timeserieslab/rdii-tool"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3.4"